# open-msupply

./: .dockerignore  .gitignore  .gitmodules  .mcp.json  AGENT.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DAILY_TALLY_HANDOVER.md  Dockerfile  LICENSE  README.md  README_GLOSSARY.md  categories and properties.md  cspell.json  generate_readme_glossary.py  omSupply central stand alone.md  package.json  project-words.txt  prompts.md  test file.txt
bench-server/: Cargo.toml  README.md
bench-server/src/: main.rs
client/: .swcrc  (+21 more)
mobile/src-tauri/: Cargo.toml  tauri.conf.json
mobile/src-tauri/capabilities/: default.json  mobile.json
mobile/src-tauri/icons/: icon.icns
mobile/src-tauri/src/: lib.rs  main.rs
server/: .dockerignore  .env  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  architecture.md  check.diff  configuration.yaml  context_table.md  crate_build_times.sh  diesel.toml  hiv-shm  hiv-wal  load-test.js  my_file_structure.txt  project-words.txt  remove_inlines.py  schema.graphql  schema.sql  spec.yaml  sqlx-data.json  v7_sync_prototype.md
server/.cargo/: config.toml
server/.claude/: settings.local.json
server/.config/: nextest.toml
server/.githooks/: pre-commit
server/.github/workflows/: build_docs_site.yml  tests.yml
server/amc/: amc.d.ts  amc.js
server/android/: Cargo.toml  README.md  host.sh  makefile
server/android/.cargo/: config.toml
server/android/src/: android.rs  lib.rs
server/app_data/: settings_app_data.yaml.example
server/central_app_data/: settings_app_data.yaml
server/cert-s/: openssl.conf
server/cli/: Cargo.toml  REPORT_BUILDER_REFACTOR_PR.md
server/cli/src/: README.md  cli.rs  connection_tests.rs  generate_graphql_typescript_types.rs  generate_plugin_typescript_types.rs  generate_typescript_types.rs  helpers.rs  lib.rs  load_test.rs  plugins.rs  refresh_dates.rs  report_utils.rs  test_connection.rs
server/codegen/: Cargo.toml
server/codegen/src/: cli.rs  lib.rs
server/configuration/: base.yaml  central.yaml  example.yaml  local.yaml  local.yaml.example  pg.yaml  production.yaml  production.yaml.example  remote1.yaml  remote2.yaml
server/data/reference1/: export.json  users.txt
server/demo/: Cargo.toml
server/demo/src/: lib.rs  main.rs  refresh_dates.rs
server/docker/zola_docs/: Dockerfile  README.md  entrypoint.sh
server/docs/: Home.md  Special-cases.md  Sync-endpoints.md  Sync-queue-addition-&-processing.md  config.toml
server/docs/content/: _index.md
server/docs/public/: search_index.en.js
server/docs/sass/: theme_override.scss
server/docs/static/: CNAME  prism.css
server/docs/templates/: page.html
server/domain/: Cargo.toml  errors.rs  events.rs  lib.rs
server/domain/invoice_line/: business_rules.rs  domain_model.rs  domain_service.rs  mod.rs  stock_events.rs
server/domain/src/: inbound_shipment.rs  invoice.rs  invoice_line.rs  item.rs  lib.rs  location.rs  master_list.rs  master_list_line.rs  name.rs  outbound_shipment.rs  shipment_tax_update.rs  stock_line.rs
server/dos/: Cargo.toml
server/gaps/: README.md  create_missing_locations_for_assets.py  gaps_insert_functions.py  gaps_item_inserts.py  gaps_item_variants.csv  gaps_item_variants.sql  gaps_items.sql  helpers.py  id_lookup.json  item_id_lookup.json  pqs_vaccine_lookup.json
server/graphql/: Cargo.toml  lib.rs  logger.rs  playground.html
server/graphql_schema/: add_and_issue_stock.graphql  query.graphql  schema.graphql
server/issues/: 00-import-export-general-pattern.md  01-import-export-unit.md  02-import-export-name.md  03-import-export-store.md  04-import-export-user.md  05-import-export-item.md  06-import-export-master-list.md  07-import-export-master-list-line.md  08-import-export-master-list-name-join.md  09-import-export-name-store-join.md  10-import-export-item-store-join.md  11-import-export-user-permission.md  12-central-data-editing-mode.md  13-initialise-as-central-server.md
server/load_test/: load-test.js
server/log/: remote_server.1774594437
server/migrations/: 20210526031245_create_requisition_table.sql  20210601032959_create_requisition_table.sql  20210601033207_create_requisition_line_table.sql  20210606073020_create_item_table.sql  20210606091546_create_item_line_table.sql  20210607021315_create_transact_table.sql  20210607021315_create_transaction_table.sql  20210607022626_create_trans_line_table.sql  20210607022626_create_transact_line_table.sql  20210607022626_create_transaction_line_table.sql  20210607023648_create_name_table.sql  20210607024352_create_store_table.sql  20210607062556_create_requisition_line_foreign_keys.sql  20210607063531_create_requisition_foreign_keys.sql  20210607064304_create_transact_foreign_keys.sql  20210607064304_create_transaction_foreign_keys.sql  20210607235510_create_item_line_foreign_keys.sql  20210607235848_create_trans_line_foreign_keys.sql  20210607235848_create_transact_line_foreign_keys.sql  20210607235848_create_transaction_line_foreign_keys.sql  20210608000531_create_store_foreign_keys.sql  20210621235905_create_user_account_table.sql  20210713030858_create_sync_out_table.sql
server/postman/: Open mSupply REST.postman_collection.json
server/report_builder/: Cargo.toml  README.md  arguments.json  report_builder.rs
server/reports/: .gitignore  README.md  test-config.json  utils.js  utils.test.ts
server/repository/: Cargo.toml  build.rs
server/scripts/: init_db.sh
server/server/: Cargo.toml
server/service/: Cargo.toml  README.md  settings_app_data.yaml
server/src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
server/suggested_quantity/: suggested_quantity.d.ts  suggested_quantity.js  test-db.json
server/test_connection/: Cargo.toml
server/tests/: graphql.rs  health_check.rs  mocks.rs  rest.rs  sync.rs  test.rs  tests.rs
server/util/: Cargo.toml
server/windows/: Cargo.toml
standard_reports/test/: .gitignore  Cargo.toml  README.md  config.example.toml
syncv7/: Cargo.toml
syncv7/src/: changelog.rs  check_enum.rs  dynamic_queries.rs  invoice_row.rs  item_row.rs  main.rs  sync_traits.rs
(+6194 files in other folders)
