[package]
name = "benchingomsupply"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
