[profile.release]
strip = true

[workspace.dependencies]
# dependencies used in graphql crates:
actix-web = { version = "4.7.0", default-features = false, features = [
  "macros",
  "rustls",
] }
actix-multipart = "0.6.1"
anymap = "0.12"
async-graphql = { version = "7.0.6", features = ["dataloader", "chrono"] }
async-graphql-actix-web = "7.0.6"
async-trait = "0.1.80"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.7", features = ["derive"] }
futures = "0.3"
futures-util = "0.3"
httpmock = "0.7"
log = "0.4"
pretty_assertions = "1.4.0"
rcgen = "0.13.1"
regex = "1.10.5"
reqwest = { version = "0.12", features = [
  "gzip",
  "json",
  "rustls-tls",
  "multipart",
  "blocking",
], default-features = false }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
simple-log = { version = "1.6.0" }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1.38.0", features = ["macros"] }
# dev dependencies used in graphql crates:
actix-rt = "2.10.0"
assert-json-diff = "2.0.2"
async-std = "1.12.0"
rand = "0.8.5"
anyhow = "1.0.56"
actix-files = "0.6.0"
# TODO: Remove. async_graphql is using 1.0 but SET_COOKIE was being imported from wrong version.
http2 = { package = "http", version = "1.0.0" }

[workspace.lints.clippy]
wrong_self_convention = "allow"
large_enum_variant = "allow"
module_inception = "allow"
bool_assert_comparison = "allow"
result_large_err = "allow"
ptr_arg = "allow"
new_ret_no_self = "allow"
enum_variant_names = "allow"
# TODO: Will need frontend changes too. Will be nice for readability.
too_many_arguments = "allow"

[workspace]

members = [
  "android",
  "report_builder",
  "repository",
  "graphql",
  "server",
  "service",
  "util",
  "graphql/asset",
  "graphql/asset_catalogue",
  "graphql/clinician",
  "graphql/cold_chain",
  "graphql/core",
  "graphql/demographic",
  "graphql/form_schema",
  "graphql/general",
  "graphql/inventory_adjustment",
  "graphql/invoice",
  "graphql/invoice_line",
  "graphql/location",
  "graphql/pack_variant",
  "graphql/plugin",
  "graphql/programs",
  "graphql/repack",
  "graphql/reports",
  "graphql/requisition",
  "graphql/requisition_line",
  "graphql/stock_line",
  "graphql/stocktake",
  "graphql/stocktake_line",
  "graphql/types",
  "graphql/vaccine_course",
  "cli",
  "windows",
]
