[profile.release]
strip = true

[workspace.dependencies]
# dependencies used in graphql crates:
# Warning don't add anything above this lines as auto patch is applied during docker build
async-graphql = { version = "7.0.17", features = ["dataloader", "chrono"] }
async-graphql-actix-web = "7.0.17"
actix-web = { version = "4.11.0", default-features = false, features = [
  "macros",
  "rustls",
] }
actix-multipart = "0.7.2"
anymap = "0.12.1"
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
futures = "0.3.31"
futures-util = "0.3.31"
httpmock = "0.7"
log = "0.4.27"
pretty_assertions = "1.4.1"
rcgen = "0.14.2"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = [
  "gzip",
  "json",
  "rustls-tls",
  "multipart",
  "blocking",
], default-features = false }
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
simple-log = { version = "=2.3.0" }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.2"
tokio = { version = "1.46.1", features = ["macros", "process"] }
# dev dependencies used in graphql crates:
anyhow = "1.0.98"
actix-rt = "2.10.0"
assert-json-diff = "2.0.2"
rand = "0.8.5"
actix-files = "0.6.6"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
base64 = "0.22.1"
ts-rs = { version = "10.1", features = ["chrono-impl", "serde-json-impl"] }

# TODO: Remove. async_graphql is using 1.0 but SET_COOKIE was being imported from wrong version.
http2 = { package = "http", version = "1.0.0" }

[workspace.lints.clippy]
wrong_self_convention = "allow"
large_enum_variant = "allow"
module_inception = "allow"
bool_assert_comparison = "allow"
result_large_err = "allow"
ptr_arg = "allow"
new_ret_no_self = "allow"
enum_variant_names = "allow"
# TODO: Will need frontend changes too. Will be nice for readability.
too_many_arguments = "allow"

[workspace]
members = [
  "android",
  "report_builder",
  "repository",
  "graphql",
  "server",
  "service",
  "util",
  "graphql/asset",
  "graphql/asset_catalogue",
  "graphql/clinician",
  "graphql/cold_chain",
  "graphql/core",
  "graphql/demographic",
  "graphql/form_schema",
  "graphql/general",
  "graphql/inventory_adjustment",
  "graphql/invoice",
  "graphql/invoice_line",
  "graphql/location",
  "graphql/plugin",
  "graphql/programs",
  "graphql/repack",
  "graphql/reports",
  "graphql/requisition",
  "graphql/requisition_line",
  "graphql/stock_line",
  "graphql/stocktake",
  "graphql/stocktake_line",
  "graphql/types",
  "graphql/vaccine_course",
  "cli",
  "windows",
]
