[package]
name = "syncv7"
version = "0.1.0"
edition = "2024"

[dependencies]
ctor = "0.6.3"
diesel = { version = "2.3.4", features = ["sqlite"] }
erased-serde = "0.4.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
