[package]
name = "android"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
name = "remote_server_android"

[dependencies]
actix-web = { version = "4.0.1", features = ["rustls"] }
futures = "0.3"
jni = { version = "0.19.0" }
log = "0.4.14"
log-panics = { version = "2", features = ["with-backtrace"] }
once_cell = "1.9.0"
rcgen = "0.9.2"
repository = { path = "../repository" }
service = { path = "../service" }
server = { path = "../server", default-features = false, features = [
    "android",
] }
tokio = { version = "1.17.0", features = ["macros"] }
android_logger = { version = "0.13.0" }
simple-log = { version = "1.6" }

[lints.clippy]
module_inception = "allow"
