[package]
name = "android"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
name = "remote_server_android"

[dependencies]
actix-web = { version = "4.7.0", features = ["rustls"] }
futures = "0.3.30"
jni = { version = "0.21.1" }
log = "0.4.14"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
once_cell = "1.19.0"
rcgen = "0.13.1"
repository = { path = "../repository" }
service = { path = "../service" }
server = { path = "../server", default-features = false, features = [
    "android",
] }
tokio = { version = "1.38.0", features = ["macros"] }
android_logger = { version = "0.13.3" }
simple-log = { version = "1.6.0" }

[lints]
workspace = true
