[package]
name = "android"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
name = "remote_server_android"

[dependencies]
actix-web = { workspace = true }
futures = "0.3.30"
jni = { version = "0.21.1" }
log = { workspace = true }
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
once_cell = "1.19.0"
rcgen = { workspace = true }
repository = { path = "../repository" }
service = { path = "../service" }
server = { path = "../server", default-features = false, features = [
    "android",
] }
tokio = { workspace = true }
android_logger = { version = "0.13.3" }
simple-log = { workspace = true }

[lints]
workspace = true
