[package]
name = "cli"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
path = "src/cli.rs"
name = "remote_server_cli"

[dependencies]

repository = { path = "../repository" }
util = { path = "../util" }
service = { path = "../service" }
server = { path = "../server" }
graphql = { path = "../graphql" }
report_builder = { path = "../report_builder" }


anyhow = { workspace = true }
async-graphql = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
diesel = { version = "2.3.7", default-features = false, features = ["chrono"] }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simple-log = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }

simple_logger = { version = "5.2.0", features = ["colors"] }
egui = { version = "0.33.3" }
eframe = { version = "0.33.3", features = ["default", "__screenshot"] }
egui_extras = { version = "0.33.3", features = ["default", "image"] }
async-trait = "0.1.89"
machine-uid = { version = "0.5.4" }
copy_dir = "0.1.3"
shellexpand = "3.1.2"
serde_yml = "0.0.12"
colored = "3.1.1"


[dev-dependencies]
actix-rt = { workspace = true }

[features]
default = ["sqlite"]
sqlite = ["server/sqlite"]
postgres = ["server/postgres"]
integration_test = []
