[package]
name = "cli"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
path = "src/cli.rs"
name = "remote_server_cli"

[[bin]]
path = "src/test_connection.rs"
name = "test_connection"

[dependencies]

repository = { path = "../repository" }
util = { path = "../util" }
service = { path = "../service" }
server = { path = "../server" }
graphql = { path = "../graphql" }
graphql_core = { path = "../graphql/core" }
report_builder = { path = "../report_builder" }


anyhow = { workspace = true }
async-graphql = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
diesel = { version = "2.2.12", default-features = false, features = ["chrono"] }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simple-log = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }

simple_logger = { version = "5.0", features = ["colors"] }
egui = { version = "0.27" }
eframe = { version = "0.27", features = ["default", "__screenshot"] }
egui_extras = { version = "0.27", features = ["default", "image"] }
async-trait = "0.1.8"
machine-uid = { version = "0.5.1" }
copy_dir = "0.1.3"
shellexpand = "3.1.0"
serde_yml = "0.0.12"

[dev-dependencies]
actix-rt = { workspace = true }

[features]
default = ["sqlite"]
sqlite = ["server/sqlite"]
postgres = ["server/postgres"]
integration_test = []
