[package]
name = "demo"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "demo_cli"

[dependencies]

repository = { path = "../repository" }
util = { path = "../util" }
service = { path = "../service" }
server = { path = "../server" }

clap = { version = "3.1.8", features = ["derive"] }
diesel = { version = "1.4.7", default-features = false, features = ["chrono"] }
chrono = { version = "0.4"}

[dev-dependencies]
actix-rt = "2.6.0"

[features]
default = ["sqlite"]
sqlite = ["repository/sqlite", "diesel/sqlite"]
postgres = ["repository/postgres", "diesel/postgres"]
