[package]
name = "domain"
version = "0.1.0"
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
repository = { path = "../repository" }

uuid = { version = "1.8.0", features = ["v7"] }
chrono = { workspace = true }
serde = { workspace = true }
env_logger = "0.11.3"
anyhow.workspace = true
log = { workspace = true }

[dev-dependencies]
thiserror = { workspace = true }
