[package]
name = "report_builder"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
path = "src/cli.rs"
name = "report_builder"
test = false
bench = false

[dependencies]
service = { path = "../service" }

anyhow.workspace = true
clap = { version = "4.5.7", features = ["derive"] }
serde = "1.0.203"
serde_json = "1.0.117"
serde_yaml = "0.9.34"
log = "0.4.16"
reqwest = { workspace = true }
regex = "1.10.5"
