[package]
name = "repository"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]

util = { path = "../util" }

chrono = { workspace = true }
rand = { workspace = true }
diesel = { version = "1.4.7", default-features = false, features = [
    "r2d2",
    "numeric",
    "chrono",
    "32-column-tables",
] }
diesel-derive-enum = { version = "1.1.1", default-features = false }
diesel_migrations = "1.4.0"
futures-util = "0.3.15"
libsqlite3-sys = { version = "0.22.2", features = ["bundled"], optional = true }
# 0.25.4 depends on libsqlite3-sys 0.22.2
rusqlite = "0.25.4"
uuid = { version = "0.8", features = ["v4"] }
regex = "1.10.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.66"
thiserror = {workspace = true}
log = "0.4.14"
# Migration script embeds package.json from repository root, single files is embeded and accessed
# via ::get(""), which doesn't work in debug (test) mode on linux, debug-embed features makes rust-embed
# behave as if it is in release mode 
rust-embed = { version = "6.4.0", features = ["debug-embed"] }
anyhow.workspace = true
pretty_assertions = "1.3.0"
strum = { version = "0.26", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.17.0", features = ["time", "rt-multi-thread", "macros"] }
actix-rt = "2.6.0"
strum = { version = "0.26", features = ["derive"] }

[features]
default = ["sqlite"]
sqlite = ["diesel/sqlite", "libsqlite3-sys", "diesel-derive-enum/sqlite"]
memory = ["diesel/sqlite", "libsqlite3-sys", "diesel-derive-enum/sqlite"]
postgres = ["diesel/postgres", "diesel-derive-enum/postgres"]
integration_test = []

[build-dependencies]
glob = "0.3.1"
