[package]
name = "server"
version = "0.1.0"
authors = ["mSupply Foundation"]
edition = "2018"
default-run = "remote_server"
build = "src/set_icon.rs"

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
path = "src/main.rs"
name = "remote_server"

[dependencies]

graphql = { path = "../graphql" }
graphql_core = { path = "../graphql/core" }
repository = { path = "../repository" }
service = { path = "../service" }
util = { path = "../util" }

machine-uid = { version = "0.5.1", optional = true }

actix-cors = "0.7.0"
actix-web = { version = "4.7.0", features = ["rustls"] }
actix-files.workspace = true
anyhow.workspace = true
config = "0.12.0"
chrono = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rustls = "0.20.9"
rustls-pemfile = "1.0.0"
serde = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
rust-embed = "6.4.0"
mime_guess = "2.0.4"
futures = "0.3.30"
simple-log = { version = "1.6.0" }
rcgen = "0.13.1"
regex = "1.10.5"
actix-multipart = { workspace = true }
futures-util = "0.3.30"
serde_json = { workspace = true }

[dev-dependencies]
actix-rt = { workspace = true }
assert-json-diff = "2.0.2"
httpmock = "0.7"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
astro-dnssd = { version = "0.3.2" }

[features]
default = ["sqlite", "dep:machine-uid"]
sqlite = ["repository/sqlite"]
postgres = ["repository/postgres"]
android = ["repository/sqlite"]

[lints]
workspace = true
