[package]
name = "service"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
repository = { path = "../repository" }
util = { path = "../util" }

anymap = "0.12"
anyhow = "1.0.56"
async-trait = "0.1.57"
thiserror = "1"
bcrypt = "0.12.0"
chrono = { workspace = true }
jsonschema = "0.16.0"
jsonwebtoken = "8.0.1"
log = "0.4.14"
reqwest = { version = "0.11.10", features = ["json"] }
url = "2.2"
serde = "1.0.126"
serde_json = "1.0.66"
serde_yaml = "0.8.24"
schemafy = "0.6.0"
schemafy_core = "0.6.0"
tera = "1"
tokio = { version = "1.17.0", features = ["macros", "sync", "time"] }
headless_chrome = "1.0.5"

[dev-dependencies]
actix-rt = "2.6.0"
assert-json-diff = "2.0.1"
httpmock = "0.6.6"
rand = "0.8.5"
actix-web = { version= "4.0.1" } 
tokio = {version = "1.21.1", features = ["macros","rt-multi-thread", "time" ]}

[features]
default = ["sqlite"]
integration_test = []
sqlite = ["repository/sqlite"]
memory = ["repository/sqlite"]
postgres = ["repository/postgres"]
