[package]
name = "service"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
repository = { path = "../repository" }
util = { path = "../util" }

anyhow.workspace = true
async-trait = { workspace = true }
thiserror = { workspace = true }
topological-sort = "0.2.2"
bcrypt = "0.15.1"
chrono = { workspace = true }
rand = { workspace = true }
actix-web = { workspace = true }
actix-files = { workspace = true }
actix-multipart = { workspace = true }
jsonschema = "0.18.0"
jsonwebtoken = "9.3.0"
log = { workspace = true }
reqwest = { workspace = true }
url = "2.5.1"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
schemafy = "0.6.0"
schemafy_core = "0.6.0"
tera = "1.20.0"
tokio = { version = "1.38.0", features = [
    "macros",
    "sync",
    "time",
    "fs",
    "rt-multi-thread",
] }
headless_chrome = "1.0.10"
pretty_assertions = { workspace = true }
flate2 = "1.0.30"
simple-log = { workspace = true }
# dependencies for temperature_sensor
temperature-sensor = { git = "https://github.com/openmsupply/temperature-sensor.git", tag = "v0.1.0-beta3" }
# plugin:
hex = "0.4.3"
pem = "3.0.4"
rsa = { version = "0.9.6", features = ["sha2"] }
sha2 = { workspace = true }
walkdir = "2.5.0"
x509-parser = { version = "0.16", features = ["verify"] }
telnet = "0.2.1"
tempfile = "3.10.1"
scraper = "0.20.0"
umya-spreadsheet = "2.0.0"
qrcode = "0.14"
rust-embed = "6.4.0"


[dev-dependencies]
actix-rt = { workspace = true }
assert-json-diff = { workspace = true }
httpmock = { workspace = true }
assert_approx_eq = "1.1.0"

[features]
default = ["sqlite"]
integration_test = ["repository/integration_test"]
sqlite = ["repository/sqlite"]
memory = ["repository/sqlite"]
postgres = ["repository/postgres"]

[lints]
workspace = true
