[package]
name = "test_connection"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_connection"
path = "src/main.rs"

[dependencies]
# fixed version of slint used to compile with rustc 1.88
slint = "=1.13.1"
tokio = { version = "1", features = ["rt", "macros"] }
cli = { path = "../cli" }
# smol_str and typed-index-collections are dependencies of slint
# fixed versions are used to compile with rustc 1.88
smol_str = "=0.2.2"
typed-index-collections = "=3.3.0"

[build-dependencies]
slint-build = "=1.13.1"
