[package]
name = "util"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
sha2 = "0.10.2"
uuid = { version = "1.8.0", features = ["v7"] }
chrono = { workspace = true }
serde = "1.0.126"
env_logger = "0.8.3"
serde_json = "1.0.66"
anyhow.workspace = true
sanitize-filename = "0.4"

[dev-dependencies]
thiserror = { workspace = true }
