[package]
name = "util"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
sha2 = { workspace = true }
uuid = { version = "1.8.0", features = ["v7"] }
chrono = { workspace = true }
serde = { workspace = true }
env_logger = "0.11.3"
serde_json = { workspace = true }
anyhow.workspace = true
sanitize-filename = "0.5"

[dev-dependencies]
thiserror = { workspace = true }
