[package]
name = "omsupply-service"
version = "0.1.0"
description = "A crate that implements windows service methods"
keywords = ["windows", "service", "daemon"]
edition = "2018"

[[bin]]
path = "src/windows.rs"
name = "omsupply_service"
test = false
bench = false

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[target.'cfg(windows)'.dependencies]
actix-web = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
server = { path = "../server", default-features = false }
service = { path = "../service" }
tokio = { workspace = true }
windows-service = "0.5.0"
eventlog = "0.2.2"
